// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components Header 1`] = `
<div>
  <div>
    <div>
      <div
        className="parent layoutMarginNone layout"
      >
        <div
          className="gridRoot grid"
        >
          <div
            className="gridStretch grid"
          >
            <div
              className="col col-2"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  Go Back
                </div>
              </div>
            </div>
            <div
              className="col col-6"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  <h2>
                    Page Title
                  </h2>
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  Action 1
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box4"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  Action 2
                </div>
              </div>
            </div>
            <div
              className="col col-1"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  1
                </div>
              </div>
            </div>
            <div
              className="col col-1"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  2
                </div>
              </div>
            </div>
            <div
              className="col col-1"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  3
                </div>
              </div>
            </div>
            <div
              className="col col-1"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  4
                </div>
              </div>
            </div>
            <div
              className="col col-1"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  5
                </div>
              </div>
            </div>
            <div
              className="col col-1"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  6
                </div>
              </div>
            </div>
            <div
              className="col col-6"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  A
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="parent layoutMarginNone layout"
      >
        <div
          className="gridRoot grid"
        >
          <h1>
            With Nested Grids
          </h1>
          <div
            className="gridStretch grid"
          >
            <div
              className="col col-2"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  Go Back
                </div>
              </div>
            </div>
            <div
              className="col col-6"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  <h2>
                    Page Title
                  </h2>
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  Action 1
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box4"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  Action 2
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-6 col grid"
          >
            <div
              className="col col-2"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  1
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  2
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  3
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  4
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  5
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  6
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-6 col grid"
          >
            <div
              className="col col-12"
            >
              <div
                className="box1"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  A
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Pagination 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridRoot grid"
      >
        <div
          className="col-12 col grid"
        >
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                &lt;
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                ...
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                5
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                6
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                7
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                8
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                9
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                10
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                ...
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                20
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box2"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                &gt;
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Autoflow 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridStretch gridRoot grid"
      >
        <div
          className="col col-1"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              1
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              2
            </div>
          </div>
        </div>
        <div
          className="col col-4"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              3
            </div>
          </div>
        </div>
        <div
          className="col col-3"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              4
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box3"
            style={
              Object {
                "height": 100,
              }
            }
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              5
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              6
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              7
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              8
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              9
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Fraction 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridRoot grid"
      >
        <h1>
          Auto Size
        </h1>
        <div
          className="grid"
        />
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 1
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 2
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 2
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 3
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 3
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 3
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 4
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 4
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 4
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 4
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 5
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 5
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 5
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 5
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 5
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 6
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 6
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 6
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 6
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 6
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 6
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 7
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 7
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 7
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 7
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 7
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 7
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 7
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 8
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 8
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 8
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 8
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 8
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 8
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 8
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1 / 8
              </div>
            </div>
          </div>
        </div>
        <h1>
          8 - auto
        </h1>
        <div
          className="grid"
        >
          <div
            className="col col-8"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                8
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                12 - 8 = 4
              </div>
            </div>
          </div>
        </div>
        <h1>
          6 - 1/2 - 1/2
        </h1>
        <div
          className="grid"
        >
          <div
            className="col col-6"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                6
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                (12 - 6) / 2 = 3
              </div>
            </div>
          </div>
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                (12 - 6) / 2 = 3
              </div>
            </div>
          </div>
        </div>
        <h1>
          Custom
        </h1>
        <div
          className="grid"
        />
        <div
          className="grid"
        >
          <div
            className="col col-6"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                6 (fixed)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Horizontal Align 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridRoot grid"
      >
        <div
          className="gridLeft col-12 col grid"
        >
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                LEFT
              </div>
            </div>
          </div>
        </div>
        <div
          className="gridCenter col-12 col grid"
        >
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                CENTER
              </div>
            </div>
          </div>
        </div>
        <div
          className="gridRight col-12 col grid"
        >
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                RIGHT
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12 col grid"
        >
          <div
            className="col col-2"
          >
            <div
              className="box3"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                DEFAULT
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Margin 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridRoot grid"
      >
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-4"
        >
          <div
            className="box3"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              Item
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
        <div
          className="col col-2"
        >
          <div
            className="box1"
            style={undefined}
          >
            <div
              className="gridMiddle gridCenter grid"
            >
              global
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Nested 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridRoot grid"
      >
        <h1>
          Nested Example
        </h1>
        <div
          className="colors2 col-12 col grid"
        >
          <div
            className="colors1 col-6 col grid"
            style={
              Object {
                "height": 150,
              }
            }
          >
            <div
              className="colors3 col-6 col grid"
            >
              <div
                className="colors4 col col-6"
              >
                <span
                  aria-label="random content"
                  role="img"
                >
                  🐓
                </span>
              </div>
            </div>
          </div>
        </div>
        <h1>
          With Offsets
        </h1>
        <div
          className="colors2 col-12 col grid"
        >
          <div
            className="colOffset-3 col col-6"
          >
            <div
              className="colors1"
            >
              A
            </div>
          </div>
          <div
            className="col col-4"
          >
            <div
              className="colors1"
            >
              A
            </div>
          </div>
          <div
            className="colOffset-4 col col-4"
          >
            <div
              className="colors1"
            >
              A
            </div>
          </div>
        </div>
        <h1>
          With Overflow
        </h1>
        <div
          className="col-12 col grid"
        >
          <div
            className="gridMarginHorizontal col-6 col grid"
          >
            <div
              className="colors2 col-12 col grid"
            >
              <div
                className="col col-2"
              >
                <div
                  className="colors1"
                >
                  2
                </div>
              </div>
              <div
                className="col col-2"
              >
                <div
                  className="colors1"
                >
                  4
                </div>
              </div>
              <div
                className="col col-2"
              >
                <div
                  className="colors1"
                >
                  6
                </div>
              </div>
              <div
                className="col col-2"
              >
                <div
                  className="colors1"
                >
                  8
                </div>
              </div>
              <div
                className="col col-2"
              >
                <div
                  className="colors1"
                >
                  10
                </div>
              </div>
              <div
                className="col col-2"
              >
                <div
                  className="colors1"
                >
                  12
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Offset 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridRoot grid"
      >
        <div
          className="grid"
        >
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +0
              </div>
            </div>
          </div>
          <div
            className="colOffset-7 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +7
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="colOffset-1 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +1
              </div>
            </div>
          </div>
          <div
            className="colOffset-5 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +5
              </div>
            </div>
          </div>
          <div
            className="colOffset-1 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +1
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="colOffset-2 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +2
              </div>
            </div>
          </div>
          <div
            className="colOffset-3 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +3
              </div>
            </div>
          </div>
          <div
            className="colOffset-3 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +3
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="colOffset-3 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +3
              </div>
            </div>
          </div>
          <div
            className="colOffset-1 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +1
              </div>
            </div>
          </div>
          <div
            className="colOffset-5 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +5
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="colOffset-4 col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +4
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                +0
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Sizing 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridRoot grid"
      >
        <div
          className="grid"
        >
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                2
              </div>
            </div>
          </div>
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                2
              </div>
            </div>
          </div>
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                2
              </div>
            </div>
          </div>
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                2
              </div>
            </div>
          </div>
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                2
              </div>
            </div>
          </div>
          <div
            className="col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                2
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col col-3"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                3
              </div>
            </div>
          </div>
          <div
            className="col col-3"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                3
              </div>
            </div>
          </div>
          <div
            className="col col-3"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                3
              </div>
            </div>
          </div>
          <div
            className="col col-3"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                3
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col col-4"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                4
              </div>
            </div>
          </div>
          <div
            className="col col-4"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                4
              </div>
            </div>
          </div>
          <div
            className="col col-4"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                4
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col col-6"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                6
              </div>
            </div>
          </div>
          <div
            className="col col-6"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                6
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col colAuto"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                Auto
              </div>
            </div>
          </div>
        </div>
        <div
          className="grid"
        >
          <div
            className="col col-12"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                12
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Vertical Align 1`] = `
<div>
  <div>
    <div
      className="parent layoutMarginNone layout"
    >
      <div
        className="gridRoot grid"
      >
        <h1>
          Item Align
        </h1>
        <div
          className="grid"
        >
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={
                Object {
                  "height": 300,
                }
              }
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                 
              </div>
            </div>
          </div>
          <div
            className="colTop col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                TOP
              </div>
            </div>
          </div>
          <div
            className="colMiddle col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                MIDDLE
              </div>
            </div>
          </div>
          <div
            className="colBottom col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                BOTTOM
              </div>
            </div>
          </div>
          <div
            className="colMiddle col col-2"
          >
            <div
              className="box1"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                MIDDLE
              </div>
            </div>
          </div>
          <div
            className="col col-2"
          >
            <div
              className="box3"
              style={undefined}
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                DEFAULT
              </div>
            </div>
          </div>
          <div
            className="col col-1"
          >
            <div
              className="box1"
              style={
                Object {
                  "height": 300,
                }
              }
            >
              <div
                className="gridMiddle gridCenter grid"
              >
                 
              </div>
            </div>
          </div>
        </div>
        <h1>
          Grid Align
        </h1>
        <div
          className="grid"
        >
          <div
            className="gridTop col-4 col grid"
            style={
              Object {
                "height": 300,
              }
            }
          >
            <div
              className="col col-12"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  TOP
                </div>
              </div>
            </div>
          </div>
          <div
            className="gridMiddle col-4 col grid"
            style={
              Object {
                "height": 300,
              }
            }
          >
            <div
              className="col col-12"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  MIDDLE
                </div>
              </div>
            </div>
          </div>
          <div
            className="gridBottom col-4 col grid"
            style={
              Object {
                "height": 300,
              }
            }
          >
            <div
              className="col col-12"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  BOTTOM
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Cards 1`] = `
<div>
  <div>
    <div
      className="page hasSubheader parent layoutMarginNone layout"
    >
      <div
        className="fixedTop auto layoutMarginNone layout"
      >
        <div
          className="header auto layoutMarginNone layout"
        >
          <div
            className="gridRoot grid"
          >
            <h1>
              Header
            </h1>
          </div>
        </div>
        <div
          className="subheader auto layoutMarginVerticalHalf layout"
        >
          <div
            className="gridMarginHorizontal gridRoot grid"
          >
            <div
              className="col col-2"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  C
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  C
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  C
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  C
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  C
                </div>
              </div>
            </div>
            <div
              className="col col-2"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  C
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="main parent layoutMarginNone layout"
      >
        <div
          className="stretch layoutMarginNone layout"
        >
          <div
            className="gridRoot grid"
          >
            <div
              className="gridStretch grid"
            >
              <div
                className="col col-10"
              >
                <div
                  className="box4"
                  style={
                    Object {
                      "height": 200,
                    }
                  }
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    D
                  </div>
                </div>
              </div>
              <div
                className="col col-2"
              >
                <div
                  className="box2"
                  style={undefined}
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-12"
              >
                <div
                  className="box2"
                  style={
                    Object {
                      "height": 150,
                    }
                  }
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-6"
              >
                <div
                  className="box2"
                  style={undefined}
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-6"
              >
                <div
                  className="box2"
                  style={undefined}
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-4"
              >
                <div
                  className="box2"
                  style={
                    Object {
                      "height": 200,
                    }
                  }
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-4"
              >
                <div
                  className="box2"
                  style={
                    Object {
                      "height": 200,
                    }
                  }
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-4"
              >
                <div
                  className="box2"
                  style={
                    Object {
                      "height": 200,
                    }
                  }
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-4"
              >
                <div
                  className="box2"
                  style={
                    Object {
                      "height": 200,
                    }
                  }
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-4"
              >
                <div
                  className="box2"
                  style={
                    Object {
                      "height": 200,
                    }
                  }
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
              <div
                className="col col-4"
              >
                <div
                  className="box2"
                  style={
                    Object {
                      "height": 200,
                    }
                  }
                >
                  <div
                    className="gridMiddle gridCenter grid"
                  >
                    B
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="footer auto layoutMarginNone layout"
        >
          <div
            className="gridRoot grid"
          >
            <h1>
              Footer
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Holy Grail 1`] = `
<div>
  <div>
    <div
      className="page parent layoutMarginNone layout"
    >
      <div
        className="header fixedTop auto layoutMarginNone layout"
      >
        <div
          className="gridRoot grid"
        >
          <h1>
            Header
          </h1>
        </div>
      </div>
      <div
        className="main stretch layoutMarginNone layout"
      >
        <div
          className="gridRoot grid"
        >
          <div
            className="nav col-2 col grid"
          >
            <h2>
              Nav
            </h2>
          </div>
          <div
            className="gridTop content col-8 col grid"
          >
            <h2>
              Content
            </h2>
          </div>
          <div
            className="ads col-2 col grid"
          >
            <h2>
              Ads
            </h2>
          </div>
        </div>
      </div>
      <div
        className="footer auto layoutMarginNone layout"
      >
        <div
          className="gridRoot grid"
        >
          <h1>
            Footer
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Stack 1`] = `
<div>
  <div>
    <div
      className="page parent layoutMarginNone layout"
    >
      <div
        className="auto layoutMarginNone layout"
      >
        <div
          className="gridRoot grid"
        >
          <div
            className="gridMarginNone grid"
          >
            <div
              className="col col-12"
            >
              <div
                className="box3"
                style={undefined}
              >
                <div
                  className="gridMiddle gridCenter grid"
                >
                  Section 1
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="parent layoutMarginNone overflow layout"
      >
        <div
          className="gridRoot grid"
        >
          <div
            className="grid"
          >
            <div
              className="col col-12"
            >
              <h1>
                SubSection 
                1
              </h1>
            </div>
          </div>
          <div
            className="grid"
          >
            <div
              className="col col-12"
            >
              <h1>
                SubSection 
                2
              </h1>
            </div>
          </div>
          <div
            className="grid"
          >
            <div
              className="col col-12"
            >
              <h1>
                SubSection 
                3
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Two Sections 1`] = `
<div>
  <div>
    <div
      className="page parent layoutMarginNone layout"
    >
      <div
        className="header fixedTop auto layoutMarginNone layout"
      >
        <div
          className="gridRoot grid"
        >
          <h1>
            Header
          </h1>
        </div>
      </div>
      <div
        className="main parent layoutMarginNone layout"
      >
        <div
          className="top auto layoutMarginNone layout"
        >
          <div
            className="gridRoot grid"
          >
            <div
              className="grid"
            >
              <div
                className="colOffset-2 col col-6"
              >
                <input
                  placeholder="Some search here"
                  type="text"
                />
              </div>
              <div
                className="col col-2"
              >
                <button>
                  Search
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="stretch layoutMarginNone layout"
        >
          <div
            className="gridRoot grid"
          >
            <div
              className="gridTop content grid"
            >
              <h2>
                Content
              </h2>
            </div>
          </div>
        </div>
        <div
          className="footer auto layoutMarginNone layout"
        >
          <div
            className="gridRoot grid"
          >
            <h1>
              Footer
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
